requestHandler/requestHandler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: request-handler
  labels:
    app: request-handler
spec:
  type: NodePort
  ports:
    - protocol: "TCP"
      port: 5000
      targetPort: 5000
  selector:
    app: request-handler
